--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "/api/chat",
-      "dest": "/api/chat.js"
+  "functions": {
+    "api/*.js": {
+      "runtime": "edge"
     }
-  ]
+  }
 }
